--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   align-items: center;
   font-size: 14pt;
   color: white;
+  margin: 0;
 }
 
 nav {
@@ -61,4 +62,32 @@ div > * {
 
 .timeRow > input {
   width: 240px;
+}
+
+.toolCard {
+  border-radius: 2px;
+  margin: 1rem;
+  position: relative;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 4px 4px rgba(0,0,0,0.23);
+  display: flex;
+}
+
+.toolCard:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.toolCard > a {
+  text-decoration: none;
+  color: inherit;
+  padding: 12px;
+  width: 100%;
+}
+
+#footer {
+  position: fixed;
+  left: 0;
+  bottom: 1em;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
 }
