--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,26 @@ div > * {
   width: 100%;
 }
 
+.smallerTextarea {
+  width: 300px;
+  height: 200px;
+}
+
+.mediumTextarea {
+  width: 500px;
+  height: 400px;
+}
+
+.jwtTool {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.jwtTool > textarea {
+  margin: 4px;
+}
+
 #footer {
   position: fixed;
   left: 0;
